--- a/progress-steps/index.html
+++ b/progress-steps/index.html
@@ -5,17 +5,18 @@
 </head>
 <body>
 <div class="container">
-    <div class="main">
-        <div class="circle">1</div>
+    <div class="progress-container">
+        <div class="progress" id="progress"></div>
+        <div class="circle active">1</div>
         <div class="circle">2</div>
         <div class="circle">3</div>
         <div class="circle">4</div>
     </div>
-    <div class="btns">
-        <button class="btn prev">Prev</button>
-        <button class="btn next">Next</button>
-    </div>
+    
+    <button class="btn" id="prev" disabled>Prev</button>
+    <button class="btn" id="next">Next</button>
 </div>
+
 </body>
 <script src="./script.js"></script>
 </html>
